@@ -1,5 +1,12 @@
 THIS CHANGELOG IS AN ATTEMPT TO DOCUMENT CHANGES TO THIS PROJECT.
 
+PL-node-v0.1.3
+ - ADD: Pattern states
+ - ADD: Ships with grunt connect if you are into that kinda thing
+ - FIX: Removed all grunt dependencies from patternlab.js
+ - FIX: Ignore dotfiles
+ - THX: thanks @bramsmulders for suggestion and help with mac
+
 PL-node-v0.1.2
  - ADD: Abstracted template rendering into a function for easier swapping of rendering engine
  - ADD: Smarter filtering of files to support other templates Thanks 
